treeview is definitly showing things now...

--- a/Java Collections in JavaFX/src/applicatiepackage/FXMLDocument.fxml
+++ b/Java Collections in JavaFX/src/applicatiepackage/FXMLDocument.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="490.0" prefWidth="493.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="applicatiepackage.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="490.0" prefWidth="493.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="applicatiepackage.FXMLDocumentController">
    <children>
       <TreeView id="tvAfdelingen" fx:id="tvAfdelingen" prefHeight="490.0" prefWidth="200.0" />
       <TableView fx:id="tvMedewerkers" layoutX="200.0" prefHeight="314.0" prefWidth="301.0">
@@ -17,9 +17,9 @@
             <TableColumn id="columnMail" fx:id="columnMail" prefWidth="75.0" text="Email" />
         </columns>
       </TableView>
-      <Button id="btnAddAfdeling" fx:id="btnAddAfdeling" layoutX="210.0" layoutY="323.0" mnemonicParsing="false" text="AddAfdeling" />
-      <Button id="btnEditAfdeling" fx:id="btnEditAfdeling" layoutX="211.0" layoutY="355.0" mnemonicParsing="false" text="EditAfdeling" />
-      <Button id="btnAddMedewerker" fx:id="btnAddMedewerker" layoutX="344.0" layoutY="323.0" mnemonicParsing="false" text="AddMedewerker" />
-      <Button id="btnEditMedewerker" fx:id="btnEditMedewerker" layoutX="345.0" layoutY="355.0" mnemonicParsing="false" text="EditMedewerker" />
+      <Button id="btnAddAfdeling" fx:id="btnAddAfdeling" layoutX="210.0" layoutY="323.0" mnemonicParsing="false" onAction="#handleAddAfdeling" text="AddAfdeling" />
+      <Button id="btnEditAfdeling" fx:id="btnEditAfdeling" layoutX="211.0" layoutY="355.0" mnemonicParsing="false" onAction="#handleEditAfdeling" text="EditAfdeling" />
+      <Button id="btnAddMedewerker" fx:id="btnAddMedewerker" layoutX="344.0" layoutY="323.0" mnemonicParsing="false" onAction="#handleAddMedewerker" text="AddMedewerker" />
+      <Button id="btnEditMedewerker" fx:id="btnEditMedewerker" layoutX="345.0" layoutY="355.0" mnemonicParsing="false" onAction="#handleEditMedewerker" text="EditMedewerker" />
    </children>
 </AnchorPane>
